# interview-project

./: .gitignore  package-lock.json  package.json  pyproject.toml  readme.md  schema.graphql  tailwind.config.ts
app/: main.py
app/src/shared/: dependencies.py  exceptions.py
app/src/tests/: conftest.py
app/utils/scripts/: create_user.py
docker/: Dockerfile
gestion-productos-ordenes/: .env  i18nConfig.ts  package-lock.json  package.json  tsconfig.json
gestion-productos-ordenes/app/: i18n.ts
gestion-productos-ordenes/app/[locale]/: layout.tsx  page.tsx
gestion-productos-ordenes/app/components/: TranslationsProvider.js
gestion-productos-ordenes/app/hooks/: useApiRequest.ts  useTokenExpiration.ts
gestion-productos-ordenes/app/lib/: authStore.ts  userProductStore.ts
gestion-productos-ordenes/locales/en/: about-us.json  home.json
gestion-productos-ordenes/locales/es/: common.json  home.json
interview-project/: package-lock.json  package.json
interview-project/public/: index.html
interview-project/src/: App.js  auth.js  i18n.js  index.css  index.js
interview-project/src/api/: axios.js
interview-project/src/utils/: utils.js
specs/: frontend.md
specs/frontend/: guide.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/components/: header.tsx  (+1 more)
src/components/: dialogAddOrder.tsx  dialogAddProduct.tsx  dialogEditProduct.tsx  header.tsx  tableOrder.tsx  tableProducts.tsx  tabnav.tsx
src/containers/: orderContainer.tsx  productsContainer.tsx
src/services/: order.service.ts  product.service.ts  user.service.ts
src/utils/: axios.ts
(+89 files in other folders)
